--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,9 @@
-Flask==2.3.3
-Flask-Cors==3.0.10
-joblib==1.3.2
-pandas==2.1.3
-pymongo==4.5.0
-numpy==1.24.4
-opencv-python==4.8.1.78
-tensorflow==2.13.0
-werkzeug==3.0.1
-
+Flask
+Flask-Cors
+joblib
+pandas
+pymongo
+numpy
+opencv-python
+tensorflow
+werkzeug
